fixed overflow, hover, styled monthly and footer

--- a/styles/indexStyles.css
+++ b/styles/indexStyles.css
@@ -10,20 +10,38 @@
     margin: 0;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 /* header */
-li a {
+
+li a, li a:visited {
     color: #fff;
     margin: 1em;
     font-size: 1.25em;
     text-shadow: 2px 2px black;
 }
-.btn {
+.donate {
     margin: 1.75em;
     font-size: 1.25;
+    float: right;
 }
 
-.nav li a:hover {
+li a:hover  {
     font-size: 1.25em;
+    color: #ff7b60;
+    text-decoration: none;
+    text-shadow: none;
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    display: inline-block;
+    margin: 2.5em;
 }
 
 /* .navbar-toggle css animates the hamburger menu */
@@ -54,24 +72,135 @@ li a {
 	transform: rotate(-45deg);
 }
 
+.navbar {
+    background-color: transparent !important;
+    border: none !important;
+}
+
+#hamburger {
+    border: none !important;
+}
+#hamburger:hover {
+    background-color: #ff7b60;
+}
 
 /* made wrapper use this photo for the whole header */
 #header-wrapper {
     background: url("http://res.cloudinary.com/sara-simpson-img/image/upload/c_fit,h_705/v1505067920/duffy-brook-350228_vnaxkf.jpg")no-repeat center center;
     width: 100%;
-    height: 800px;
+    height: 650px;
     background-size: cover;
+}
+
+.adopt-me {
+    text-align: center;
 }
 
 /* jumbotron */
 .jumbotron {
-    background-color: #ff7b60 !important;
+    background-color: #83a7f7 !important;
 }
 
 .jumbotron p {
     font-size: 3em;
     text-align: center;
-    
+    color: #fff;
+    font-family: 'Encode Sans Condensed', sans-serif;
+}
+
+/* main */
+.monthly {
+    text-align: center;
+    margin-bottom: 1.5em;
+    font-family: 'Encode Sans Condensed', sans-serif;
+}
+
+.monthly-section{
+    margin-bottom: 2.5em;
+    padding-bottom: 1.5em;
+}
+
+.dog-monthly {
+    text-align: center;
+    display: right;
+}
+.about-dog {
+    margin: 3em 2em 0 0;
+    text-align: center;
+    padding: 1em;
 }
 
 
+#adopt-button {
+    background-color: #83a7f7;
+    color: #fff;
+    margin-right: 45%;
+}
+
+.social-media-icons {
+    text-align: center;
+    color: #ff7b60;
+}
+
+/* footer */
+.follow {
+    margin-top: 1em;
+    text-align: center;
+    font-family: 'Encode Sans Condensed', sans-serif;
+    color: #fff;
+    
+}
+.social-media-icons {
+    text-align: center;
+    margin-top: 1.25em;
+    padding: 1.25em;
+}
+
+.resources {
+    text-align: center;
+    margin-top: 1.5em;
+    padding: 1em;
+    font-family: 'Encode Sans Condensed', sans-serif;
+    background-color: #77747f;
+    color: #fff;
+    margin-top: 1.5em;
+    padding: 3em;
+}
+
+.resources a,
+.resources a:hover,
+.resources a:visited {
+    text-decoration: none;
+    color: #000;
+}
+
+footer {
+    background-color: #d6d4d8;
+}
+
+footer h2 {
+    text-shadow: 2px 2px black;
+}
+ 
+.contact {
+    background-color: #77747f;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.15em;
+    padding: 2em;
+}
+/* back to top button */
+#topButton {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border:none;
+    outline: none;
+    background-color: transparent;
+    color: #000;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+}
